# ZiApi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
API/: AModule.hpp  Config.hpp  Core.hpp  FieldValue.hpp  IHttpRequest.hpp  IHttpResponse.hpp  IModule.hpp  Module.hpp  ModuleManager.hpp  Network.hpp  Pipeline.hpp  ZiExcept.hpp  ZiLogger.hpp
API/HTTP/: FieldValue.hpp  HttpHeader.hpp  HttpMessage.hpp  HttpRequest.hpp  HttpResponse.hpp  Message.hpp  Request.hpp  Response.hpp
API/http/: HttpHeader.hpp  HttpRequest.hpp  HttpResponse.hpp
API/utils/: FieldValue.hpp
docs/: Behaviour.mdj  Doxyfile  Zia.mdj  config  config~  customdoxygen.css  doxyfile  header.html
docs/html/: AModule_8hpp_source.html  Config_8hpp_source.html  Core_8hpp_source.html  FieldValue_8cpp-example.html  FieldValue_8hpp_source.html  HttpHeader_8hpp_source.html  HttpMessage_8hpp_source.html  HttpRequest_8hpp_source.html  HttpResponse_8hpp_source.html  Info.plist  LoggerTest_8cpp-example.html  Message_8hpp_source.html  ModuleManager_8hpp_source.html  Module_8hpp_source.html  MyFieldValue_8cpp-example.html  MyFieldValue_8hpp-example.html  MyHttpRequest_8cpp-example.html  MyServer_8cpp-example.html  Network_8hpp_source.html  Nodes.xml  Pipeline_8hpp_source.html  (+104 more)
examples/: LoggerTest.cpp  LoggerTest.output  MyConfig.hpp  MyCore.hpp  MyCore.output  MyFieldValue.cpp  MyFieldValue.hpp  MyFieldValue.output  MyHttpRequest.cpp  MyHttpRequest.hpp  MyHttpRequest.output  MyHttpResponse.hpp  MyModule.hpp  MyModuleManager.hpp  MyNetwork.hpp  MyServer.cpp  MyServer.output
exemples/: logger.cpp
(+110 files in other folders)
